@@ -1,6 +1,8 @@
 ver 0.18.1 (2013/11/??)
 * protocol:
   - always ignore whitespace at the end of the line
+* networking:
+  - log UNIX domain path names instead of "localhost"
 * filter:
   - autoconvert: fix "volume_normalization" with mp3 files
 * add missing files to source tarball
